// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateSecretStorageDialog shows 'Generate a Security Key' text if no key backup is present 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title mx_CreateSecretStorageDialog_centeredTitle"
        id="mx_BaseDialog_title"
      >
        Set up Secure Backup
      </h1>
    </div>
    <div>
      <form>
        <p
          class="mx_CreateSecretStorageDialog_centeredBody"
        >
          Safeguard against losing access to encrypted messages & data by backing up encryption keys on your server.
        </p>
        <div
          class="mx_CreateSecretStorageDialog_primaryContainer"
          role="radiogroup"
        >
          <label
            class="mx_StyledRadioButton mx_StyledRadioButton_enabled mx_StyledRadioButton_checked mx_StyledRadioButton_outlined"
          >
            <input
              checked=""
              name="keyPassphrase"
              type="radio"
              value="key"
            />
            <div>
              <div />
            </div>
            <div
              class="mx_StyledRadioButton_content"
            >
              <div
                class="mx_CreateSecretStorageDialog_optionTitle"
              >
                <span
                  class="mx_CreateSecretStorageDialog_optionIcon mx_CreateSecretStorageDialog_optionIcon_secureBackup"
                />
                Generate a Security Key
              </div>
              <div>
                We'll generate a Security Key for you to store somewhere safe, like a password manager or a safe.
              </div>
            </div>
            <div
              class="mx_StyledRadioButton_spacer"
            />
          </label>
          <label
            class="mx_StyledRadioButton mx_StyledRadioButton_enabled mx_StyledRadioButton_outlined"
          >
            <input
              name="keyPassphrase"
              type="radio"
              value="passphrase"
            />
            <div>
              <div />
            </div>
            <div
              class="mx_StyledRadioButton_content"
            >
              <div
                class="mx_CreateSecretStorageDialog_optionTitle"
              >
                <span
                  class="mx_CreateSecretStorageDialog_optionIcon mx_CreateSecretStorageDialog_optionIcon_securePhrase"
                />
                Enter a Security Phrase
              </div>
              <div>
                Use a secret phrase only you know, and optionally save a Security Key to use for backup.
              </div>
            </div>
            <div
              class="mx_StyledRadioButton_spacer"
            />
          </label>
        </div>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              data-testid="dialog-cancel-button"
              type="button"
            >
              Cancel
            </button>
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              type="button"
            >
              Continue
            </button>
          </span>
        </div>
      </form>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`CreateSecretStorageDialog shows a loading spinner initially 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    />
    <div>
      <div>
        <div
          class="mx_Spinner"
        >
          <div
            aria-label="Loading…"
            class="mx_Spinner_icon"
            data-testid="spinner"
            role="progressbar"
            style="width: 32px; height: 32px;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`CreateSecretStorageDialog when backup is present but not trusted shows migrate text, then 'RestoreKeyBackupDialog' if 'Restore' is clicked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Upgrade your encryption
      </h1>
    </div>
    <div>
      <form>
        <p>
          Upgrade this session to allow it to verify other sessions, granting them access to encrypted messages and marking them as trusted for other users.
        </p>
        <div>
          <div>
            <div>
              Restore your key backup to upgrade your encryption
            </div>
          </div>
        </div>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="danger"
              type="button"
            >
              Skip
            </button>
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              type="button"
            >
              Restore
            </button>
          </span>
        </div>
      </form>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`CreateSecretStorageDialog when canUploadKeysWithPasswordOnly calls bootstrapSecretStorage once keys are restored if the backup is now trusted 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Upgrade your encryption
      </h1>
    </div>
    <div>
      <form>
        <p>
          Upgrade this session to allow it to verify other sessions, granting them access to encrypted messages and marking them as trusted for other users.
        </p>
        <div>
          <div>
            <div>
              Enter your account password to confirm the upgrade:
            </div>
            <div>
              <div
                class="mx_Field mx_Field_input"
              >
                <input
                  id="mx_CreateSecretStorageDialog_password"
                  label="Password"
                  placeholder="Password"
                  type="password"
                  value=""
                />
                <label
                  for="mx_CreateSecretStorageDialog_password"
                >
                  Password
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="danger"
              type="button"
            >
              Skip
            </button>
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              disabled=""
              type="button"
            >
              Next
            </button>
          </span>
        </div>
      </form>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`CreateSecretStorageDialog when canUploadKeysWithPasswordOnly prompts for a password and then shows RestoreKeyBackupDialog 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Upgrade your encryption
      </h1>
    </div>
    <div>
      <form>
        <p>
          Upgrade this session to allow it to verify other sessions, granting them access to encrypted messages and marking them as trusted for other users.
        </p>
        <div>
          <div>
            <div>
              Enter your account password to confirm the upgrade:
            </div>
            <div>
              <div
                class="mx_Field mx_Field_input"
              >
                <input
                  id="mx_CreateSecretStorageDialog_password"
                  label="Password"
                  placeholder="Password"
                  type="password"
                  value=""
                />
                <label
                  for="mx_CreateSecretStorageDialog_password"
                >
                  Password
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="danger"
              type="button"
            >
              Skip
            </button>
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              disabled=""
              type="button"
            >
              Next
            </button>
          </span>
        </div>
      </form>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`CreateSecretStorageDialog when canUploadKeysWithPasswordOnly when there is an error fetching the backup version after RestoreKeyBackupDialog handles the error sensibly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Upgrade your encryption
      </h1>
    </div>
    <div>
      <form>
        <p>
          Upgrade this session to allow it to verify other sessions, granting them access to encrypted messages and marking them as trusted for other users.
        </p>
        <div>
          <div>
            <div>
              Enter your account password to confirm the upgrade:
            </div>
            <div>
              <div
                class="mx_Field mx_Field_input"
              >
                <input
                  id="mx_CreateSecretStorageDialog_password"
                  label="Password"
                  placeholder="Password"
                  type="password"
                  value=""
                />
                <label
                  for="mx_CreateSecretStorageDialog_password"
                >
                  Password
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mx_Dialog_buttons"
        >
          <span
            class="mx_Dialog_buttons_row"
          >
            <button
              class="danger"
              type="button"
            >
              Skip
            </button>
            <button
              class="mx_Dialog_primary"
              data-testid="dialog-primary-button"
              disabled=""
              type="button"
            >
              Next
            </button>
          </span>
        </div>
      </form>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`CreateSecretStorageDialog when there is an error fetching the backup version shows an error 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_CreateSecretStorageDialog"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    />
    <div>
      <div>
        <p>
          Unable to query secret storage status
        </p>
        <div
          class="mx_Dialog_buttons"
        >
          <div
            class="mx_Dialog_buttons"
          >
            <span
              class="mx_Dialog_buttons_row"
            >
              <button
                data-testid="dialog-cancel-button"
                type="button"
              >
                Cancel
              </button>
              <button
                class="mx_Dialog_primary"
                data-testid="dialog-primary-button"
                type="button"
              >
                Retry
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
